# ui_tests

./: .env  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  pytest.ini
entities/components/: base_component.py  base_item_component.py
entities/components/cart/: cart_item.py  cart_popup.py  cart_popup_item.py
entities/components/catalog/: catalog_dropdown.py  item_card.py
entities/components/head/: auth_dropdown.py  head.py  login_form.py  main_bar.py  top_bar.py
entities/elements/: base_element.py  button.py  input.py  link.py  text.py
entities/pages/: base_page.py  cart.py  catalog.py  favorites.py  main.py
test_data/: users.py
tests/: conftest.py  test_cart.py  test_catalog.py  test_favorites.py  test_login.py
utils/: config.py
